# explanationspace

./: .buildinfo  .gitignore  HowTo.md  Makefile  README.md  cover.html  genindex.html  intro.html  main.tex  markdown-notebooks.html  markdown.html  myfyle.html  notebooks.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  tutorial.py
_sources/: markdown-notebooks.ipynb  myfyle.md
_sources/thesis/: intro.md
docs/source/: api.rst  auditTutorial.rst  audits.rst  conf.py  index.rst  installation.rst  motivation.rst
explanationSpace/: _config.yml  _toc.yml  cover.md  references.bib
explanationSpace/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  myfyle.doctree  notebooks.doctree
explanationSpace/_build/html/: .buildinfo  genindex.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  searchindex.js
explanationSpace/_build/html/_sources/: markdown-notebooks.ipynb
explanationSpace/thesis/: intro.md  references.md
explanationSpaceBook/: _toc.yml  markdown.md  myfyle.md
explanationspace/: __init__.py  audits.py
tests/: test_audit.py
thesis/: intro.html  references.html
