[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "explanationspace"
version = "0.0.2"
authors = [
  { name="Carlos Mougan", email="carmougan@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cmougan/explanationspace"
"Bug Tracker" = "https://github.com/cmougan/explanationspace/issues"